k8s/infra/envoy-gateway/envoy-proxy-config.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: eg
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
  parametersRef:
    group: gateway.envoyproxy.io
    kind: EnvoyProxy
    name: aws-nlb-proxy
    namespace: envoy-gateway-system
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: valheim-gateway
  namespace: default
spec:
  gatewayClassName: eg
  listeners:
    - name: valheim-udp-2456
      protocol: UDP
      port: 2456
      allowedRoutes:
        namespaces:
          from: Same
    - name: valheim-udp-2457
      protocol: UDP
      port: 2457
      allowedRoutes:
        namespaces:
          from: Same
